# duplinker

./: .gitignore  README.md  config.json  duplinker.service  duplinker.timer  meson.build
.cache/clangd/index/: config_reader.hpp.46C88B80A5E5CA00.idx  constants.hpp.543E8B855A7DC2E0.idx  enames.h.20C973A2185FC689.idx  error_exit.hpp.1BE8977A852498F3.idx  get_file_hashes.hpp.72A94C881E96B9FD.idx  hasher.hpp.DF80ABC51D39C8F2.idx  init_store_dir.hpp.056B97C1F1A28CA4.idx  json.hpp.C9C618D753F9F1E9.idx  main.cpp.4B02FEB36E2C1972.idx  usage.hpp.96E1C808C5E18D05.idx
src/: config_reader.hpp  constants.hpp  file_handler.hpp  get_files_hashes.hpp  init_store_dir.hpp  main.cpp
src/utils/: enames.h  error_exit.hpp  hasher.hpp  usage.hpp
